samples/_failures_safe/1761040041_401f46_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_42c7741c.c: In function ‘parse_unknown’:
./samples/SAFE/__tmp_42c7741c.c:161:14: error: expected ‘;’ at end of input
  161 |         token
      |              ^
      |              ;
./samples/SAFE/__tmp_42c7741c.c:161:9: error: expected declaration or statement at end of input
  161 |         token
      |         ^~~~~
./samples/SAFE/__tmp_42c7741c.c:161:9: error: expected declaration or statement at end of input
